# fast-api-example02

./: main.py  pyproject.toml
models/: events.py  users.py
routes/: events.py  users.py
tests/: test_event.http  test_user.http
