[tool.poetry]
name = "planner"
version = "0.1.0"
description = "FastAPI study"
authors = ["wooseong <ddk74100@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.3.0"}
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
